2007-11-19  Mathias Hasselmann  <mathias@openismus.com>

	List download locations, code repository, bugzilla.

	* README: List GNOME resources.

2007-11-19  Mathias Hasselmann  <mathias@openismus.com>

	Say "key/value store", instead of "hash table".

	* docs/reference/libepc/libepc-1.0-docs.xml, README:
	Say "key/value store", instead of "hash table".

2007-11-19  Mathias Hasselmann  <mathias@openismus.com>

	Add missing documentation and update package dependencies.

	* NEWS, README: Add missing documentation.
	* configure.ac: Update package dependencies.
	* docs/reference/libepc/libepc-1.0-docs.xml: Add hash table metapher.

2007-11-19  Mathias Hasselmann  <mathias@openismus.com>

	Remove calls to g_timeout_add_seconds convenience function of glib-2.14,
	as all other parts of the library are satisfied with glib-2.12.

	* tests/framework.c: Remove g_timeout_add_seconds.

2007-11-19  Mathias Hasselmann  <mathias@openismus.com>

	* configure.ac: Bump version.

2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.2 ===

2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Simplify authentication by using an approach similiar to the one
	Alex Larsson uses for gvfs: The consumer just emits an signal that
	authentication credentials are required, and the signal handler
	changes some consumer properties when being able to provide them.

	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
	* libepc/consumer.c, libepc/consumer.h: Remove reauthenticate signal.
	Modify authentication signal. Add username and password properties.
	* libepc/marshal.list: Update the authentication marshaller.
	* libepc/publisher.c: Dump debug messages during authentication.
	* libepc-ui/password-dialog.c: Use the new authentication scheme.

2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Remove a bogous hash sign from API documentation.

2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Further discussion of epc_consumer_new_for_name.
